@@ -83,6 +83,7 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 - Fix `setup.dashboards.always_kibana` when using Kibana 5.6. {issue}6090[6090]
 - Update Golang 1.9.4 {pull}6326[6326]
 - Fix conditions checking on autodiscover Docker labels. {pull}6412[6412]
+- Fix for kafka logger. {pull}6430[6430]
 
 *Auditbeat*
 
